chore(sdk): enable type checking for wandb_init.py (#4784)
chore(sdk): enable type checking for wandb_init.py

--- a/mypy.ini
+++ b/mypy.ini
@@ -188,7 +188,7 @@ disallow_untyped_calls = False
 ignore_errors = True
 
 [mypy-wandb.sdk.wandb_init]
-ignore_errors = True
+disallow_untyped_calls = False
 
 [mypy-wandb.sdk.wandb_login]
 ignore_errors = True
