chore(sdk): enable type checking for wandb_setup.py

--- a/mypy.ini
+++ b/mypy.ini
@@ -228,7 +228,7 @@ disallow_untyped_calls = False
 ignore_errors = True
 
 [mypy-wandb.sdk.wandb_setup]
-ignore_errors = True
+ignore_errors = False
 
 [mypy-wandb.sdk.wandb_save]
 ignore_errors = True
