--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -940,6 +940,14 @@ jobs:
                 command: |
                   sed -i -e 's/WANDB_API_KEY_PLACEHOLDER/'"$WANDB_API_KEY"'/g' << parameters.path >>/<< parameters.pod_config_name >>
             - run:
+                name: "Propagate GCP & AWS credential environment variables to pod.yaml"
+                command: |
+                  sed -i -e 's^GCLOUD_SERVICE_KEY_PLACEHOLDER^'"$GCLOUD_SERVICE_KEY"'^g' << parameters.path >>/<< parameters.pod_config_name >>
+                  sed -i -e 's^GCLOUD_PROJECT_PLACEHOLDER^'"$GOOGLE_PROJECT_ID"'^g' << parameters.path >>/<< parameters.pod_config_name >>
+                  sed -i -e 's^AWS_DEFAULT_REGION_PLACEHOLDER^'"$AWS_DEFAULT_REGION"'^g' << parameters.path >>/<< parameters.pod_config_name >>
+                  sed -i -e 's^AWS_ACCESS_KEY_ID_PLACEHOLDER^'"$AWS_ACCESS_KEY_ID"'^g' << parameters.path >>/<< parameters.pod_config_name >>
+                  sed -i -e 's^AWS_SECRET_ACCESS_KEY_PLACEHOLDER^'"$AWS_SECRET_ACCESS_KEY"'^g' << parameters.path >>/<< parameters.pod_config_name >>
+            - run:
                 name: "Spin up pod"
                 command: |
                   kubectl apply -f << parameters.path >>/<< parameters.pod_config_name >>
@@ -1299,7 +1307,9 @@ workflows:
           path: "./tests/standalone_tests/shards/gke_cpu"
           pod_name: "cpu-pod"
           image_name: << pipeline.parameters.container_registry >>/${GOOGLE_PROJECT_ID}/cpu-sdk:latest
-          context: slack-secrets
+          context:
+            - slack-secrets
+            - aws-wandb-testing-secrets
           notify_on_failure: << pipeline.parameters.nightly_slack_notify >>
           notify_on_success: << pipeline.parameters.nightly_slack_notify >>
           execute: << pipeline.parameters.nightly_execute_standalone_cpu >>
@@ -1311,7 +1321,9 @@ workflows:
           path: "./tests/standalone_tests/shards/gke_gpu"
           pod_name: "gpu-pod"
           image_name: << pipeline.parameters.container_registry >>/${GOOGLE_PROJECT_ID}/gpu-sdk:latest
-          context: slack-secrets
+          context:
+            - slack-secrets
+            - aws-wandb-testing-secrets
           notify_on_failure: << pipeline.parameters.nightly_slack_notify >>
           notify_on_success: << pipeline.parameters.nightly_slack_notify >>
           execute: << pipeline.parameters.nightly_execute_standalone_gpu >>
