--- a/tox.ini
+++ b/tox.ini
@@ -533,7 +533,7 @@ whitelist_externals =
 commands =
     mkdir -p test-results
     wandb login --relogin {env:WANDB_API_KEY}
-    echo '{env:GCLOUD_SERVICE_KEY}' > /tmp/gcp-service-account.json
+    echo $GCLOUD_SERVICE_KEY > /tmp/gcp-service-account.json
     export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-service-account.json
     standalone-cpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
     standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
