run tests in py310 too; and rip out all other tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1335,188 +1335,15 @@ workflows:
               - << pipeline.trigger_source >>
         - not: << pipeline.parameters.manual >>
     jobs:
-      #
-      # Linting
-      #
-      - tox-base:
-          name: "code-check"
-          python_version_minor: 8
-          toxenv: "protocheck3,protocheck4,generatecheck,codecovcheck,mypy,mypy-report,pyupgrade,black,isort-check,flake8,docstrings"
-
-      #
-      # System tests with pytest on Linux, using real wandb server
-      #
-      - pytest:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [6, 7, 8, 9, 10]
-          name: "system-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/system_tests --ignore=tests/pytest_tests/system_tests/tests_launch"
-      #
-      # Unit tests with pytest on Linux, using the old mock server
-      #
-      - tox-base:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [6, 7, 8, 9, 10]
-          name: "unit-linux-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/unit_tests_old --ignore=tests/pytest_tests/unit_tests_old/tests_launch --ignore=tests/pytest_tests/unit_tests_old/tests_s_nb"
-      #
-      # Unit tests with pytest on Linux
-      #
-      - tox-base:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [6, 7, 8, 9, 10]
-          name: "unit-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/unit_tests"
-
-      #
-      # Unit tests with pytest on Windows and MacOS
-      #
-      - win:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-win-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle"
-          tox_args: "tests/pytest_tests/unit_tests_old --timeout 300 --ignore=tests/pytest_tests/unit_tests_old/tests_launch --ignore=tests/pytest_tests/unit_tests_old/tests_s_nb"
 
       - win:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: [9, 10]
           name: "unit-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle"
           tox_args: "tests/pytest_tests/unit_tests --timeout 300"
-
-      - mac:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-macos-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/unit_tests_old --ignore=tests/pytest_tests/unit_tests_old/tests_launch --ignore=tests/pytest_tests/unit_tests_old/tests_s_nb"
-
-      - mac:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-macos-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/unit_tests"
-
-      #
-      # Functional tests with yea on Linux (base only)
-      #
-      - tox-base:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [7]
-              shard:
-                - "base"
-          name: "func-linux-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "func-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>,func-covercircle"
-          tox_args: "tests/functional_tests"
-
-          parallelism: 4
-      #
-      # Functional tests with yea on Linux
-      #
-      - tox-base:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [7]
-              shard:
-                - "sklearn"
-                - "metaflow"
-                - "tf115"
-                - "tf21"
-                - "tf24"
-                - "tf25"
-                - "tf26"
-                - "ray112"
-                - "ray2"
-                - "service"
-                - "noml"
-                - "grpc"
-                - "docs"
-          name: "func-linux-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "func-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>,func-covercircle"
-          tox_args: "tests/functional_tests"
-
-      #
-      # Functional tests with yea on Windows
-      #
-      - win:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "func-win-s_base-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "func-s_base-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          tox_args: "tests/functional_tests"
-          parallelism: 6
-          xdist: 1
-
-      #
-      # wandb launch tests
-      #
-      - launch:
-          name: "launch-mock-server"
-          toxenv: "pylaunch,covercircle"
-
-      - pytest:
-          name: "launch-relay-server"
-          toxenv: "pylaunch,covercircle"
-          tox_args: "tests/pytest_tests/system_tests/tests_launch"
-
-      #
-      # sharded unit tests
-      #
-      # s_nb: notebook tests
-      - tox-base:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [6]
-          name: "unit-linux-notebooks-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>,unit-covercircle"
-      - win:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-win-notebooks-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          parallelism: 1
-          xdist: 1
-      - mac:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-macos-notebooks-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          parallelism: 1
-          xdist: 1
-      #
-      # pex test
-      #
-      - pex:
-          name: "pex"
 
   # todo: needs love
   #  manual_test:
