point to new yea-wandb

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ envlist=
 
 [base]
 setenv =
-    YEA_WANDB_VERSION = 0.9.1
+    YEA_WANDB_VERSION = 0.9.3
     ; Setting low network buffer so that we exercise flow control logic
     WANDB__NETWORK_BUFFER = 1000
 
@@ -422,8 +422,7 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea-wandb/archive/wandb-relay.zip
-    ; yea-wandb=={env:YEA_WANDB_VERSION}
+    yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
@@ -519,8 +518,7 @@ deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea-wandb/archive/wandb-relay.zip
-    ; yea-wandb=={env:YEA_WANDB_VERSION}
+    yea-wandb=={env:YEA_WANDB_VERSION}
 whitelist_externals =
     date
     echo
