add executor tests

--- a/tox.ini
+++ b/tox.ini
@@ -567,3 +567,22 @@ commands =
     regression-wandb-sdk-other-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/wandb-git/wandb-examples {posargs}
     regression-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh tests/s3-beta/ {posargs}
     regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh tests/sagemaker-beta/ {posargs}
+
+
+[testenv:executor-{pex,uwsgi,gunicorn}]
+install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
+basepython=python3.9
+commands_pre =
+deps =
+    flask
+    gunicorn
+    uwsgi==2.0.21
+    pex
+setenv =
+    {[base]setenv}
+    WANDB_API_KEY=6a385551cd3441f33c63c871f0c98173abfc2d53
+passenv = *
+whitelist_externals =
+    bash
+commands =
+    bash tests/standalone_tests/executor_tests/{envname}.sh {posargs}
