rewrite pex test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1524,7 +1524,7 @@ workflows:
               toxenv:
                 - "executor-uwsgi"
                 - "executor-gunicorn"
-#                - "executor-pex"
+                - "executor-pex"
           name: "<<matrix.toxenv>>-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
       #
       # pex test
